// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GOLDEN buildHeaders (default executor providers) > claude → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,oauth-2025-04-20,interleaved-thinking-2025-05-14,context-management-2025-06-27,prompt-caching-scope-2026-01-05,advanced-tool-use-2025-11-20,effort-2025-11-24,structured-outputs-2025-12-15,fast-mode-2026-02-01,redact-thinking-2026-02-12,token-efficient-tools-2026-03-28",
    "Anthropic-Dangerous-Direct-Browser-Access": "true",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "User-Agent": "claude-cli/<VER> (external, sdk-cli)",
    "X-App": "cli",
    "X-Stainless-Arch": "arm64",
    "X-Stainless-Helper-Method": "stream",
    "X-Stainless-Lang": "js",
    "X-Stainless-Os": "MacOS",
    "X-Stainless-Package-Version": "<VER>",
    "X-Stainless-Retry-Count": "0",
    "X-Stainless-Runtime": "node",
    "X-Stainless-Runtime-Version": "v<VER>",
    "X-Stainless-Timeout": "600",
    "x-api-key": "<CRED>",
  },
  "nonStream": {
    "Anthropic-Beta": "claude-code-20250219,oauth-2025-04-20,interleaved-thinking-2025-05-14,context-management-2025-06-27,prompt-caching-scope-2026-01-05,advanced-tool-use-2025-11-20,effort-2025-11-24,structured-outputs-2025-12-15,fast-mode-2026-02-01,redact-thinking-2026-02-12,token-efficient-tools-2026-03-28",
    "Anthropic-Dangerous-Direct-Browser-Access": "true",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "User-Agent": "claude-cli/<VER> (external, sdk-cli)",
    "X-App": "cli",
    "X-Stainless-Arch": "arm64",
    "X-Stainless-Helper-Method": "stream",
    "X-Stainless-Lang": "js",
    "X-Stainless-Os": "MacOS",
    "X-Stainless-Package-Version": "<VER>",
    "X-Stainless-Retry-Count": "0",
    "X-Stainless-Runtime": "node",
    "X-Stainless-Runtime-Version": "v<VER>",
    "X-Stainless-Timeout": "600",
    "x-api-key": "<CRED>",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,oauth-2025-04-20,interleaved-thinking-2025-05-14,context-management-2025-06-27,prompt-caching-scope-2026-01-05,advanced-tool-use-2025-11-20,effort-2025-11-24,structured-outputs-2025-12-15,fast-mode-2026-02-01,redact-thinking-2026-02-12,token-efficient-tools-2026-03-28",
    "Anthropic-Dangerous-Direct-Browser-Access": "true",
    "Anthropic-Version": "2023-06-01",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "claude-cli/<VER> (external, sdk-cli)",
    "X-App": "cli",
    "X-Stainless-Arch": "arm64",
    "X-Stainless-Helper-Method": "stream",
    "X-Stainless-Lang": "js",
    "X-Stainless-Os": "MacOS",
    "X-Stainless-Package-Version": "<VER>",
    "X-Stainless-Retry-Count": "0",
    "X-Stainless-Runtime": "node",
    "X-Stainless-Runtime-Version": "v<VER>",
    "X-Stainless-Timeout": "600",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > deepseek → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > gemini → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Content-Type": "application/json",
    "x-goog-api-key": "<CRED>",
  },
  "nonStream": {
    "Content-Type": "application/json",
    "x-goog-api-key": "<CRED>",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > glm → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
  "nonStream": {
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > glm-cn → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > groq → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > iflow → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "iFlow-Cli",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "iFlow-Cli",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "iFlow-Cli",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > mimo-free → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > minimax → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
  "nonStream": {
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > minimax-cn → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
  "nonStream": {
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > openai → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > opencode-zen → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > openrouter → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "HTTP-Referer": "https://endpoint-proxy.local",
    "X-Title": "Endpoint Proxy",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "HTTP-Referer": "https://endpoint-proxy.local",
    "X-Title": "Endpoint Proxy",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "HTTP-Referer": "https://endpoint-proxy.local",
    "X-Title": "Endpoint Proxy",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > qoder → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > siliconflow → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > vercel-ai-gateway → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > xai → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > xiaomi-mimo → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > xiaomi-tokenplan → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > zed → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "<CRED>",
    "Content-Type": "application/json",
    "content-type": "application/json",
  },
  "nonStream": {
    "Authorization": "<CRED>",
    "Content-Type": "application/json",
    "content-type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "<CRED>",
    "Content-Type": "application/json",
    "content-type": "application/json",
  },
}
`;

exports[`GOLDEN buildUrl (default executor providers) > claude → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.anthropic.com/v1/messages?beta=true",
  "stream": "https://api.anthropic.com/v1/messages?beta=true",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > deepseek → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.deepseek.com/chat/completions",
  "stream": "https://api.deepseek.com/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > gemini → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://generativelanguage.googleapis.com/v1beta/models/test-model:generateContent",
  "stream": "https://generativelanguage.googleapis.com/v1beta/models/test-model:streamGenerateContent?alt=sse",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > glm → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.z.ai/api/anthropic/v1/messages?beta=true",
  "stream": "https://api.z.ai/api/anthropic/v1/messages?beta=true",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > glm-cn → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://open.bigmodel.cn/api/coding/paas/v4/chat/completions",
  "stream": "https://open.bigmodel.cn/api/coding/paas/v4/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > groq → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.groq.com/openai/v1/chat/completions",
  "stream": "https://api.groq.com/openai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > iflow → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://apis.iflow.cn/v1/chat/completions",
  "stream": "https://apis.iflow.cn/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > mimo-free → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.xiaomimimo.com/api/free-ai/openai/chat",
  "stream": "https://api.xiaomimimo.com/api/free-ai/openai/chat",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > minimax → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.minimax.io/anthropic/v1/messages?beta=true",
  "stream": "https://api.minimax.io/anthropic/v1/messages?beta=true",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > minimax-cn → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.minimaxi.com/anthropic/v1/messages?beta=true",
  "stream": "https://api.minimaxi.com/anthropic/v1/messages?beta=true",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > openai → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.openai.com/v1/chat/completions",
  "stream": "https://api.openai.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > opencode-zen → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://opencode.ai/zen/v1/chat/completions",
  "stream": "https://opencode.ai/zen/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > openrouter → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://openrouter.ai/api/v1/chat/completions",
  "stream": "https://openrouter.ai/api/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > qoder → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api3.qoder.sh/algo/api/v2/service/pro/sse/agent_chat_generation",
  "stream": "https://api3.qoder.sh/algo/api/v2/service/pro/sse/agent_chat_generation",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > siliconflow → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.siliconflow.com/v1/chat/completions",
  "stream": "https://api.siliconflow.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > vercel-ai-gateway → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://ai-gateway.vercel.sh/v1/chat/completions",
  "stream": "https://ai-gateway.vercel.sh/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > xai → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.x.ai/v1/chat/completions",
  "stream": "https://api.x.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > xiaomi-mimo → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.xiaomimimo.com/v1/chat/completions",
  "stream": "https://api.xiaomimimo.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > xiaomi-tokenplan → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://token-plan-sgp.xiaomimimo.com/v1/chat/completions",
  "stream": "https://token-plan-sgp.xiaomimimo.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > zed → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://cloud.zed.dev/completions",
  "stream": "https://cloud.zed.dev/completions",
}
`;
